--- a/src/app/components/home/main/edit-main/edit-main.component.html
+++ b/src/app/components/home/main/edit-main/edit-main.component.html
@@ -6,7 +6,7 @@
         </div>
         
         <div class="inputdiv">
-            <input #foto id="foto" type="url">
+            <input #foto formControlName="foto" id="foto" type="url">
             <button><i class="fa-solid fa-plus"></i></button>
         </div>
     </div>
