--- a/src/app/components/home/footer/contact/contact.component.css
+++ b/src/app/components/home/footer/contact/contact.component.css
@@ -1,4 +1,4 @@
-div{
+main{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,9 +22,35 @@ a:hover{
 
 h2{
     font-size: 2em;
-    margin: 0.3em 0 0 0 ;
+    margin: 0;
+    font-weight: 600;
 }
 
 p{
     color: rgb(134, 134, 134);
 }
+
+
+.head{
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    margin: 5px;
+}
+
+
+#edit {
+    cursor: pointer;
+    background-color: white;
+    font-size: 1em;
+    border-radius: 100%;
+    height: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1/1;
+    color: black;
+  }
+  i, label{
+    cursor: pointer;
+  }
