--- a/src/app/components/home/proyects/proyects.component.css
+++ b/src/app/components/home/proyects/proyects.component.css
@@ -1,19 +1,23 @@
 main {
   background-color: black;
+  height: fit-content;
 }
 
 .principal {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
 .cards {
   max-width: 1200px;
-  margin: 50px auto;
+  margin: 10px auto;
 }
 .card {
   width: 30%;
-  background: #333;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  background-color: rgb(26, 26, 26);
   float: left;
   border: solid 1px white;
   border-radius: 10px;
@@ -41,4 +45,121 @@ main {
     width: 90%;
     margin: 5%;
   }
+}
+
+.head{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1em;
+}
+
+#edit {
+  cursor: pointer;
+  background-color: white;
+  font-size: 1.5em;
+  border-radius: 100%;
+  height: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/1;
+  color: black;
+}
+i,label{
+  cursor: pointer;
+}
+
+
+
+
+/* banner */
+/* cuadro de usuario */
+.banner {
+  position: absolute;
+  top: 70px;
+  right: 0;
+  margin-right: 30px;
+  background-color: rgb(255, 255, 255);
+  z-index: 100;
+}
+
+.banner   p{
+  color: black;
+  font-weight: 700;
+}
+.banner button {
+margin: 0 10px 5px 10px;
+height: 2.5em;
+width: 7em;
+font-size: larger;
+font-weight: 700;
+cursor: pointer;
+}
+
+
+/* invitado */
+.guest{
+    height: fit-content;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#login{
+    background-color: black;
+    color: white;
+}
+#signUp{
+    background-color: white;
+
+}
+/*  */
+
+/* admin */
+.admin{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.admin p {
+  margin: 0;
+  padding: 5px;
+}
+.admin button{
+  margin-top: 10px;
+  background-color: black;
+  color: white;
+}
+.admin button:hover{
+  background-color: rgb(80, 80, 80);
+  transition: ease-in-out 0.5s;
+}
+
+/* user */
+.user{
+  height: fit-content;
+  width: 10vw;
+display: flex;
+justify-content: flex-end;
+padding: 10px;
+}
+.recuadro{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90%;
+  background-color: rgb(255, 255, 255);
+  border-left: 2px solid black;
+}
+.recuadro p {
+  border-bottom: 1px solid black;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.banner a {
+  color: black;
+  background-color: rgb(255, 255, 255);
+  padding-left: 5px;
 }
