--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <div id="link">
-            <a href="">GitHub</a>
+            <a href="https://github.com/valentin1609" target="_blank"> GitHub </a>
         </div>
 
         <div id="user">
@@ -35,7 +35,7 @@
             <label *ngIf="isGuest" (click)="onGuest()"> <i class="fa-solid fa-user-secret"></i> </label>
         </div>
         <div class="menuIcon" (click)="onMenu()">
-            <img src="./../../../../assets/images/menu-line.png" alt="">
+            <label> <i class="fa-solid fa-bars"></i> </label> 
         </div>
 
         <div class="menuMovile" *ngIf="!mostrar">
@@ -56,7 +56,7 @@
                 experience</a>
             </div>
             <div id="linkMovile">
-                <button>GitHub</button>
+                 <a href="https://github.com/valentin1609" target="_blank" id="git"> GitHub </a> 
             </div>
         </div>
 
