--- a/src/app/components/home/proyects/edit-proyects/edit-proyects.component.html
+++ b/src/app/components/home/proyects/edit-proyects/edit-proyects.component.html
@@ -39,8 +39,8 @@
 
         <div>
             <input formControlName="nombre" type="text" id="nombre" placeholder="nombre">
-            <textarea formControlName="descripcion" rows="3" id="descripcion" placeholder="descripcion">  </textarea>
-            <input formControlName="url" type="url" id="url" placeholder="url">
+            <textarea formControlName="descripcion" rows="3" id="descripcion" placeholder="descripcion (max. 999 characters)">  </textarea>
+            <input formControlName="url" type="url" id="url" placeholder="url (max. 1500 characters)">
             <button type="submit">
                 <i class="fa-solid fa-plus"></i>
             </button>
