--- a/src/app/components/home/skills/skills.component.css
+++ b/src/app/components/home/skills/skills.component.css
@@ -1,9 +1,9 @@
 main {
   display: flex;
   justify-content: center;
-  background-color: rgb(19, 19, 19);
   min-height: 100%;
   height: fit-content;
+  padding-bottom: 10%;
 }
 
 .principal {
@@ -11,11 +11,13 @@ main {
   height: fit-content;
   min-height: 50px;
   width: 80%;
+  max-width: 1100px;
   border: solid 1px white;
   display: flex;
   align-items: center;
   flex-direction: column;
   position: relative;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 
@@ -90,8 +92,21 @@ margin-bottom: 10px;
   aspect-ratio: 1/1;
   color: black;
 }
+#edit label, #edit i {
+  cursor: pointer;
+}
 
 
+@media only screen and (max-width: 850px){
+  main {
+    min-height: none;
+    padding-bottom: 10%;
+  }
+}
+
+
+
+/* ------- ------ */
 .sub-page {
   border: solid 1px white;
   width: 100%;
@@ -99,3 +114,14 @@ margin-bottom: 10px;
   display: grid;
   grid-template-columns: 2fr 1fr;
 }
+
+@media only screen and (max-width: 720px) {
+  .sub-page {
+    display: flex;
+    flex-direction: column;
+  }
+
+}
+
+
+
