--- a/src/app/components/home/education/edit-education/edit-education.component.css
+++ b/src/app/components/home/education/edit-education/edit-education.component.css
@@ -33,11 +33,16 @@
   
 button{
   background-color: transparent;
+  border: none;
   color: white;
   font-size: 1em;
   cursor: pointer;
   display: flex;
   align-items: center;
+}
+
+form button[disabled] {
+  color: grey;
 }
 
 
