--- a/src/app/components/home/education/edit-education/edit-education.component.html
+++ b/src/app/components/home/education/edit-education/edit-education.component.html
@@ -41,7 +41,7 @@
 
             </div>
 
-            <button type="submit">
+            <button type="submit" [disabled]="form.invalid">
                 <i class="fa-solid fa-check"></i>
             </button>
 
