--- a/src/app/components/home/footer/footer.component.css
+++ b/src/app/components/home/footer/footer.component.css
@@ -2,5 +2,5 @@ div{
     display: flex;
     justify-content: center;
     height: fit-content;
-    background-color: rgb(27, 27, 27);
+    background-color: rgba(0, 0, 0, 0.75);
 }
