--- a/src/app/components/home/header/header.component.css
+++ b/src/app/components/home/header/header.component.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.8);
   height: 80px;
   display: flex;
   justify-content: space-between;
@@ -12,10 +12,6 @@
   gap: 2em;
   width: 100%;
   margin-right: 1em;
-}
-
-.header-right div {
-  cursor: pointer;
 }
 
 .logo {
@@ -112,6 +108,13 @@ a:hover {
 #linkMovile button:hover {
   border: 2px solid white;
   transition: ease-in-out 0.5s;
+}
+
+#linkMovile #git {
+  border: 1px solid white;
+  width: 60%;
+  background-color: black;
+  color: white;
 }
 
 @media only screen and (max-width: 850px) {
