--- a/src/app/components/home/home/home.component.css
+++ b/src/app/components/home/home/home.component.css
@@ -1,6 +1,8 @@
 .page1 {
-  height: 100vh;
-  background-color: black;
+  height: 100%;
+  background: url(../../../../assets/images/fondonuevo.png);
+  background-size: cover;
+  background-position: center;
 }
 
  /* cuadro de usuario */
