--- a/src/app/components/home/main/edit-main/edit-main.component.html
+++ b/src/app/components/home/main/edit-main/edit-main.component.html
@@ -4,11 +4,12 @@
         <div class="imgdiv">
             <img [src]="perfilimg" alt="">
         </div>
-        
         <div class="inputdiv">
-            <input #foto formControlName="foto" id="foto" type="url">
+            <input #foto formControlName="foto" id="foto" type="url" placeholder="(max. 1500 characters)">
             <button><i class="fa-solid fa-plus"></i></button>
         </div>
+        
+        
     </div>
 
     <div class="information">
@@ -20,7 +21,7 @@
 
         <input #titulo formControlName="titulo" id="titulo" type="text" placeholder="titulo">
 
-        <textarea #presentacion formControlName="presentacion" id="about" rows="3" placeholder="about me"> </textarea>
+        <textarea #presentacion formControlName="presentacion" id="about" rows="3" placeholder="about me (max. 999 characters)"> </textarea>
 
         <button type="submit">save</button>
     </div>
