--- a/src/app/components/home/skills-idioms/edit-idioms/edit-idioms.component.html
+++ b/src/app/components/home/skills-idioms/edit-idioms/edit-idioms.component.html
@@ -23,7 +23,7 @@
             <input formControlName="nombre" type="text">
             <input formControlName="nivel" type="text">
 
-            <button type="submit">
+            <button type="submit" [disabled]="form.invalid">
                 <i class="fa-solid fa-plus"></i>
             </button>
     </div>
