--- a/src/app/components/login/get-in/get-in.component.css
+++ b/src/app/components/login/get-in/get-in.component.css
@@ -1,7 +1,8 @@
 main{
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: calc(100% - 80px);
 }
 
 .head {
@@ -13,11 +14,14 @@ main{
 
 
 .form {
-    margin-top: 5%;
+    padding-bottom: 10px;
     border: white 2px solid; 
-    height: 60vh;
+    min-height: 55vh;
+    height: fit-content;
     width: 25vw;
-    position: relative;
+    min-width: 250px;
+    margin: auto 0;
+    background-color: rgba(0, 0, 0, 0.699);
 }
 form{
     display: flex;
@@ -56,11 +60,10 @@ button{
 
 .foot{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    position: absolute;
     width: 100%;
-    padding: 10px;
-    bottom: 0;
 }
 a{
     color: white;
@@ -68,4 +71,8 @@ a{
 }
 a:hover{
     color: rgb(175, 175, 175);
+}
+
+label{
+    color: red;
 }
