--- a/src/app/components/login/new-account/new-account.component.css
+++ b/src/app/components/login/new-account/new-account.component.css
@@ -1,28 +1,19 @@
 body{
-    background-color: black;
+    background: url(../../../../assets/images/loginnuevo.jpg);
+    background-size: cover;
+    background-position: center;
     height: 100vh;
-}
-header {
-  background-color: rgb(0, 0, 0);
-  width: 100%;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  padding: 0 20px 0 20px;
-}
-
-.logos {
-  height: 80px;
-  display: flex;
-  align-items: center;
 }
 
 main{
     display: flex;
     align-items: center;
     justify-content: center;
+    height: calc(100% - 80px);
+
 }
 .form{
+  background-color: rgba(0, 0, 0, 0.8);
   border: white 2px solid; 
   height: 80vh;
   width: 80vw;
