add new user service

--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -23,7 +23,7 @@
             <div class="recuadro">
             <p>Hi Usuario</p>
 
-            <a routerLink="/new-account">View profile</a> <br>
+            <a routerLink="/user-profile">View profile</a> <br>
             <a (click)="onlogOut()" >Exit</a>
         
             </div>
